<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.linear.LinearFragment">


    <Button
        android:id="@+id/btn1l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="32dp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/btn2l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn3l"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button3" />


        <Button
            android:id="@+id/btn4l"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:text="@string/button4" />

        <Button
            android:id="@+id/btn5l"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button5" />
    </LinearLayout>

    <Button
        android:id="@+id/btn6l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button6" />


    <TextView
        android:id="@+id/text_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>