<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_linear">

    <fragment
        android:id="@+id/nav_linear"
        android:name="com.example.layoutsexample.ui.linear.LinearFragment"
        android:label="@string/linear_layout"
        tools:layout="@layout/fragment_linear" />

    <fragment
        android:id="@+id/nav_relative"
        android:name="com.example.layoutsexample.ui.relative.RelativeFragment"
        android:label="@string/relative_layout"
        tools:layout="@layout/fragment_grid" />

    <fragment
        android:id="@+id/nav_grid"
        android:name="com.example.layoutsexample.ui.grid.GridFragment"
        android:label="@string/grid_layout"
        tools:layout="@layout/fragment_relative" />

    <fragment
        android:id="@+id/nav_constraints"
        android:name="com.example.layoutsexample.ui.constraints.ConstraintsFragment"
        android:label="@string/constraints_layout"
        tools:layout="@layout/fragment_constraints" />
</navigation>